[package]
name = "note-taking-app"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple and efficient note-taking application built with Rust"
license = "MIT"
repository = "https://github.com/yourusername/note-taking-app"
keywords = ["notes", "productivity", "cli", "text-editor"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
crossterm = "0.27"
ratatui = "0.24"
tokio = { version = "1.0", features = ["full"] }
fuzzy-matcher = "0.3"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "notes"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0